# rofi-faye

./: .gitignore  Cargo.toml  README.md  dprint.json  justfile
src/: lib.rs
