[package]
name = "rofi-faye"
version = "0.1.0"
authors = ["fawn <fawn@rinici.de>"]
edition = "2021"
license = "Apache-2.0"
repository = "https://codeberg.org/faye/rofi"
description = "eager evaluation for faye in rofi"

[lib]
name = "faye"
crate-type = ["cdylib"]

[dependencies]
faye = { version = "0.6.1", default-features = false }

rofi-mode = "0.4.0"
rofi-plugin-sys = "0.4.0"

copypasta-ext = { version = "0.4.4", default-features = false, features = ["x11-bin", "wayland-bin", "osc52"] }
